# ShaAntiSpamBot

./: .gitignore  README.md  install.sh  pyproject.toml
src/shaantispambot/: botmain.py  main.py
